[project]
name = "claude2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.10.0",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20250402",
]
